--- a/compositing_shaders/slides/compositing_shaders_sem_dokt_polish.tex
+++ b/compositing_shaders/slides/compositing_shaders_sem_dokt_polish.tex
@@ -7,7 +7,7 @@
 
   \usecolortheme{orchid} % default from Warsaw theme
   \usecolortheme{whale} % default from Warsaw theme
-  \usecolortheme{beaver} % this overrides both orchid and whale, as far as I see, but keep them for safety
+  \usecolortheme{beaver} % this overrides both orchid and whale, as far as I~see, but keep them for safety
 
   % these override \usecolortheme above
   \setbeamercolor{frametitle}{bg=,fg=darkred!80!black}
@@ -26,7 +26,7 @@
 \usepackage{times}
 \usepackage[T1]{fontenc}
 
-\title{Komponowanie shaderów w X3D}
+\title{Komponowanie shaderów w~X3D}
 
 \author[Michalis Kamburelis]{Michalis Kamburelis \\ \texttt{michalis.kambi@gmail.com}}
 
@@ -57,16 +57,16 @@
 \section{Wstęp}
 
 \begin{frame}{Wstęp}
-Jak tworzyć i łączyć efekty graficzne oparte na shaderach.
+Jak tworzyć i~łączyć efekty graficzne oparte na~shaderach.
 
 \begin{itemize}
-  \item Rozszerzenie dwóch zintegrowanych ze sobą języków (X3D i GLSL).
+  \item Rozszerzenie dwóch zintegrowanych ze sobą języków (X3D i~GLSL).
   \item Praktyczne, implementowalne (100\% skończona
-    i przetestowana implementacja open-source).
+    i~przetestowana implementacja open-source).
 \end{itemize}
 \end{frame}
 
-\begin{frame}{Proste i działa}
+\begin{frame}{Proste i~działa}
 
 Proste, ale nikt inny tego jeszcze nie zrobił :)
 
@@ -74,18 +74,18 @@ Proste, ale nikt inny tego jeszcze nie zrobił :)
   \item Przynajmniej nie bez wymyślania zupełnie nowego języka pisania shaderów
     (Spark, Sh). Ale nowe języki nie zdobywają popularności,
     bo zazwyczaj wymagają przepisania całego renderowania.
-    Nasz pomysł to eleganckie rozszerzenie GLSL i X3D.
+    Nasz pomysł to eleganckie rozszerzenie GLSL i~X3D.
     % glsl - (który jest podstawą OpenGL, więc znają go wszyscy
 \end{itemize}
 
-Działa świetnie :) Istotnie różne algorytmy na shaderach stają się łatwe,
-i to do ,,prawdziwej'' implementacji (która, raz zrobiona,
-musi być użyteczna na różnych modelach).
+Działa świetnie :) Istotnie różne algorytmy na~shaderach stają się łatwe,
+i~to do~,,prawdziwej'' implementacji (która, raz zrobiona,
+musi być użyteczna na~różnych modelach).
 Będą ładne obrazki.
 
-    % Istotnie pozwalam na programowanie i łączenie efektów
-    % za pomocą shaderów w bardzo wygodny sposób.
-    %  IMHO dopiero teraz GLSL jest użyteczny dla autorów.
+    % Istotnie pozwalam na~programowanie i~łączenie efektów
+    % za~pomocą shaderów w~bardzo wygodny sposób.
+    %  IMHO dopiero teraz GLSL jest użyteczny dla~autorów.
 
 \end{frame}
 
@@ -94,11 +94,11 @@ Będą ładne obrazki.
 \begin{frame}[fragile]{X3D}
 
 \begin{itemize}
-  \item \textbf{Extensible 3D}: język do opisu światów 3D.
-  \item Otwarty (pełne specyfikacje na \texttt{http://www.web3d.org/}), popularny standard.
+  \item \textbf{Extensible 3D}: język do~opisu światów 3D.
+  \item Otwarty (pełne specyfikacje na~\texttt{http://www.web3d.org/}), popularny standard.
   \item Łatwo wyrazić wszystkie typowe elementy świata 3D.
-  \item Drzewo węzłów w wielu prostych przypadkach.
-    Ale ogólnie skierowany graf węzłów, z możliwymi cyklami.
+  \item Drzewo węzłów w~wielu prostych przypadkach.
+    Ale ogólnie skierowany graf węzłów, z~możliwymi cyklami.
   \item Każdy węzeł ma pola, niektóre pola mogą zawierać węzły-dzieci.
 \end{itemize}
 
@@ -138,36 +138,36 @@ Kilka elementów które czynią X3D bardziej interesującym,
 jako ,,deklaratywny język programowania'':
 
 \begin{itemize}
-  \item DEF/USE: referencje, dla wszystkich węzłów.
-  \item Mechanizm zdarzeń: wysyłanie i reagowane na zdarzenia.
+  \item DEF/USE: referencje, dla~wszystkich węzłów.
+  \item Mechanizm zdarzeń: wysyłanie i~reagowane na~zdarzenia.
     Deklaratywny odpowiednik wywołania metody obiektu.
-    Np. otwórz drzwi kiedy user kliknie na klamkę.
+    Np.~otwórz drzwi kiedy user kliknie na~klamkę.
   \item Prototypy: można definiować nowe, pełnowartościowe,
     węzły jako kombinację istniejących.
-  \item Skrypty: integracja z innymi językami (np. JavaScript) łatwa.
-    Skrypt pozostaje ,,black boxem'' dla X3D, jednocześnie w samym
-    X3D definiujemy precyzyjnie do czego skrypt ma a do czego nie ma dostępu.
-     %  np. JavaScript. U mnie --- z własnym prostym językiem skryptowym
-     % oraz ze skompilowanym kodem w ObjectPascalu.
-     % Więcej nowinek w vrml\_engine\_doc, sekcja "advanced features".
+  \item Skrypty: integracja z~innymi językami (np. JavaScript) łatwa.
+    Skrypt pozostaje ,,black boxem'' dla~X3D, jednocześnie w~samym
+    X3D definiujemy precyzyjnie do~czego skrypt ma a do~czego nie ma dostępu.
+     %  np.~JavaScript. U mnie --- z~własnym prostym językiem skryptowym
+     % oraz ze skompilowanym kodem w~ObjectPascalu.
+     % Więcej nowinek w~vrml\_engine\_doc, sekcja "advanced features".
 \end{itemize}
 \end{frame}
 
 \begin{frame}{Shadery}
 Shadery:
 \begin{itemize}
-  \item Języki do cieniowania obiektów 3D. Zaprogramuj pracę per-vertex,
-    pozwól na rasteryzację, zaprogramuj pracę per-pixel.
-    % Chociaż przy pomocy pewnych sztuczek (tekstury oparte na float,
-    % render to textury) można je wykorzystać do ogólnych obliczeń,
-    % obecnie do ogólnych obliczeń wygodniejsze są CUDA/OpenCL
+  \item Języki do~cieniowania obiektów 3D. Zaprogramuj pracę per-vertex,
+    pozwól na~rasteryzację, zaprogramuj pracę per-pixel.
+    % Chociaż przy pomocy pewnych sztuczek (tekstury oparte na~float,
+    % render to textury) można je wykorzystać do~ogólnych obliczeń,
+    % obecnie do~ogólnych obliczeń wygodniejsze są CUDA/OpenCL
     % (google.com/q=gpgpu).
     % Można próbować
     % geom shader
-  \item Nas interesują shadery na GPU, czyli do renderowania w czasie
-    rzeczywistym. GLSL (OpenGL), Cg (NVidia: dla OpenGL lub Direct 3D),
+  \item Nas interesują shadery na~GPU, czyli do~renderowania w~czasie
+    rzeczywistym. GLSL (OpenGL), Cg (NVidia: dla~OpenGL lub~Direct 3D),
     HLSL (Direct 3D).
-  \item Naturalnie, X3D posiada węzły do definiowania shaderów.
+  \item Naturalnie, X3D posiada węzły do~definiowania shaderów.
 \end{itemize}
 \end{frame}
 
@@ -197,24 +197,24 @@ Shape \{
 
 \begin{itemize}
   %  \item + Wybiera pierwszy obsługiwany shader.
-  %% \item + Można łatwo przekazać do shadera wartości uniform (per-object)
-  %%   albo attribute (per-vertex). Np. przekaż aktualny czas
+  %% \item + Można łatwo przekazać do~shadera wartości uniform (per-object)
+  %%   albo attribute (per-vertex). Np.~przekaż aktualny czas
   %%    to shadera.
-  \item + Łatwa implementacja dla renderera, bo właśnie tak działają GPU,
-    na to pozwala OpenGL etc.
+  \item + Łatwa implementacja dla~renderera, bo właśnie tak działają GPU,
+    na~to pozwala OpenGL etc.
   \item - \textbf{Trudne implementowanie własnych shaderów}.
     Zanim zaczniesz pisać swój efekt, najpierw odtwórz algorytm
     standardowego renderowania.
     Możesz skopiować kod wygenerowany przez renderer,
-    i zorientować się gdzie dodać swoje modyfikacje, ale...
+    i~zorientować się gdzie dodać swoje modyfikacje, ale...
   \item - \textbf{Powstają shadery 1-razowego użytku}.
-    Konkretny kod shadera przywiązuje Cię do wielu ustawień sceny
+    Konkretny kod shadera przywiązuje Cię do~wielu ustawień sceny
     (ile, jakie tekstury, światła etc.).
     Ogólny shader (uwzględniający wszystkie możliwości) nie jest możliwy,
     chociażby dlatego że nie ma będzie działał szybko.
-  \item - \textbf{Wszystkie efekty w jednym worku}.
+  \item - \textbf{Wszystkie efekty w~jednym worku}.
     Usuwanie / dodawanie efektu oznacza ostrożne wstawianie logiki
-    do istniejącego (dużego) kodu.
+    do~istniejącego (dużego) kodu.
 \end{itemize}
 \end{frame}
 
@@ -227,7 +227,7 @@ Shape \{
 
   \item Ale tradycyjne podejscie, ,,napisz shader który robi wszystko'',
     uniemożliwia to. Zaprogramowanie najmniejszej zmiany (np. przefiltruj
-    światło przez szablon) wymaga zatroszczenia się o algorytm naokoło.
+    światło przez szablon) wymaga zatroszczenia się o~algorytm naokoło.
 
   \item Wolimy programować efekty które rozszerzają/modyfikują
     istniejące zachowanie.
@@ -237,23 +237,23 @@ Shape \{
 \begin{frame}{Rozwiązanie}
 
 \begin{block}{Pomysł 1}
-Prosty w użyciu mechanizm do definiowania i używania
+Prosty w~użyciu mechanizm do~definiowania i~używania
 ,,gniazd'' (plugs) --- miejsc gdzie można dodać własne obliczenia.
-Żeby użyć gniazda o nazwie \texttt{texture\_apply},
-zdefiniuj funkcję o magicznej nazwie \texttt{PLUG\_texture\_apply}
-w nowym węźle \texttt{Effect}.
+Żeby użyć gniazda o~nazwie \texttt{texture\_apply},
+zdefiniuj funkcję o~magicznej nazwie \texttt{PLUG\_texture\_apply}
+w~nowym węźle \texttt{Effect}.
 \end{block}
 
 \begin{itemize}
-  \item + Zachowujemy pełną siłę języka shaderów (GLSL w naszej implementacji).
+  \item + Zachowujemy pełną siłę języka shaderów (GLSL w~naszej implementacji).
     %% - You still have the full power of shading language like GLSL
-    %%   (we do not hide it from you, we do not invent any new language
-    %%   for writing shaders, and implementation doesn't have to do any
+    %%   (we do~not hide it from you, we do~not invent any new language
+    %%   for writing shaders, and implementation doesn't have to do~any
     %%   difficult operations to process your shading language code).
-  \item + Implementacja w rendererze łatwa: rozszerzamy istniejący język.
+  \item + Implementacja w~rendererze łatwa: rozszerzamy istniejący język.
   \item + Implementacja efektów łatwa: zaczynamy od razu pisać nasz algorytm,
     wskazujemy tylko gdzie go wstawić.
-  \item + Efekty reusable: wstawiane w wewnętrzny shader, wygenerowany
+  \item + Efekty reusable: wstawiane w~wewnętrzny shader, wygenerowany
     znając tekstury, oświetlenie etc.
   \item + Efekty można łączyć: wiele efektów może używać tych samych gniazd.
 \end{itemize}
@@ -284,18 +284,18 @@ effects Effect \{
 
 \begin{frame}{Wewnętrzne efekty}
 
-Możemy zaimplementować wewnętrzne efekty w podobny sposób.
+Możemy zaimplementować wewnętrzne efekty w~podobny sposób.
 
 \begin{itemize}
   \item Shadow maps: filtruj odpowiednie źródło światła,
-  \item Klasyczny Bump mapping: zmień wektor normalny na podstawie tekstury,
-  \item Mgła: wymieszaj końcowy kolor pixela z kolorem mgły.
+  \item Klasyczny Bump mapping: zmień wektor normalny na~podstawie tekstury,
+  \item Mgła: wymieszaj końcowy kolor pixela z~kolorem mgły.
 \end{itemize}
 
 \begin{figure}
   \centering
   \includegraphics[width=2in]{../rhan_shrine_5_everything}
-  \caption{Połączenie dwóch shadow maps i bump mapping}
+  \caption{Połączenie dwóch shadow maps i~bump mapping}
 \end{figure}
 \end{frame}
 
@@ -303,14 +303,14 @@ Możemy zaimplementować wewnętrzne efekty w podobny sposób.
 \begin{itemize}
   \item Nowy węzeł \texttt{Effect}: wybierz język shaderów.
   \item Nowy węzeł \texttt{EffectPart}: wybierz typ (vertex, pixel, etc.).
-  \item Można definiować własne uniform w \texttt{Effect}, np. przekazać
-    teksturę albo czas (\texttt{TimeSensor.time} z X3D) do efektu.
+  \item Można definiować własne uniform w~\texttt{Effect}, np.~przekazać
+    teksturę albo czas (\texttt{TimeSensor.time} z~X3D) do~efektu.
     % jak ComposedShader
-  \item Wszystkie efekty będą dodane do bazowego shadera. (Upraszczając.)
+  \item Wszystkie efekty będą dodane do~bazowego shadera. (Upraszczając.)
   \item Stary \texttt{ComposedShader} modyfikuje bazowy shader.
-    W ten sposób stary \texttt{ComposedShader} też jest lepszy:
-    może współpracować z wewnętrznymi efektami (shadow maps),
-    i efektami użytkownika (z węzłów \texttt{Effect}).
+    W~ten sposób stary \texttt{ComposedShader} też jest lepszy:
+    może współpracować z~wewnętrznymi efektami (shadow maps),
+    i~efektami użytkownika (z węzłów \texttt{Effect}).
 \end{itemize}
 \end{frame}
 
@@ -318,25 +318,25 @@ Możemy zaimplementować wewnętrzne efekty w podobny sposób.
 \begin{figure}
   \centering
   \includegraphics[width=1.8in]{../fresnel_and_toon}
-  \caption{Połączenie dwóch prostych efektów Fresnela i cieniowania kreskówkowego}
+  \caption{Połączenie dwóch prostych efektów Fresnela i~cieniowania kreskówkowego}
 \end{figure}
 
 (Kod: \texttt{demo\_models/compositing\_shaders/fresnel\_and\_toon.x3dv})
 
   %% : show the X3D source:
-  %%   I can just say: "this is a list of effects you should use:
+  %%   I~can just say: "this is a list of effects you should use:
   %%   this one, and this one. Now make it happen."
   %%   And both effects are applied.
 \end{frame}
 
-\begin{frame}{Efekty dla źródeł światła}
+\begin{frame}{Efekty dla~źródeł światła}
 \begin{block}{Pomysł 2}
-Efekty można dodawać nie tylko do widocznych obiektów 3D,
-także do innych elementów sceny. W ten sposob można zdefiniować
+Efekty można dodawać nie tylko do~widocznych obiektów 3D,
+także do~innych elementów sceny. W~ten sposob można zdefiniować
 światło które ma specyficzny kształt, specyficznie równanie etc.
 \end{block}
 
-Takie światło automatycznie współpracuje z cieniami, bump mapping etc.!
+Takie światło automatycznie współpracuje z~cieniami, bump mapping etc.!
 
 \begin{figure}
   \centering
@@ -347,17 +347,17 @@ Takie światło automatycznie współpracuje z cieniami, bump mapping etc.!
 
 \begin{frame}{Efekty tekstur}
 Tekstury można modyfikować przy użyciu efektów. Tekstury mają mnóstwo
-zastosowań (to po prostu macierz, zazwyczaj 2D lub 3D), więc wiele nowych
+zastosowań (to po prostu macierz, zazwyczaj 2D lub~3D), więc wiele nowych
 możliwości.
 \end{frame}
 
-\begin{frame}{Proceduralne tekstury na GPU}
-Proceduralne tekstury to po prostu funkcje 2D lub 3D ->
+\begin{frame}{Proceduralne tekstury na~GPU}
+Proceduralne tekstury to po prostu funkcje 2D lub~3D ->
 kolor, wektor normalny, etc.
 
 Tworzenie ich zawsze było łatwe, ale stare metody miały wadę:
-ponieważ nie jest to tekstura dla renderera, znikają możliwości wygodnego
-generowania i przypisywania współrzędnch. Rozwiązujemy to przez
+ponieważ nie jest to tekstura dla~renderera, znikają możliwości wygodnego
+generowania i~przypisywania współrzędnch. Rozwiązujemy to przez
 \texttt{ShaderTexture}.
 
 \begin{columns}[T]
@@ -374,7 +374,7 @@ generowania i przypisywania współrzędnch. Rozwiązujemy to przez
 
 \end{frame}
 
-\begin{frame}{Efekty działające na grupę}
+\begin{frame}{Efekty działające na~grupę}
 Naturalne rozszerzenie. Przykładowo, ciekawa mgła.
 
 \begin{figure}
@@ -384,24 +384,24 @@ Naturalne rozszerzenie. Przykładowo, ciekawa mgła.
 \end{figure}
 
 (Kod: \texttt{demo\_models/compositing\_shaders/volumetric\_animated\_fog.x3dv}.\\
-\textbf{Krótki i działa na dowolnym modelu 3D!}\\
+\textbf{Krótki i~działa na~dowolnym modelu 3D!}\\
 Unline other implementation.)
 % Turn on/off fog.
 
 \end{frame}
 
 \begin{frame}{Definiuj własne gniazda}
-Twój efekt może definiować gniazda do użycia przez inne efekty.
+Twój efekt może definiować gniazda do~użycia przez inne efekty.
 Trywialne: magiczny komentarz \texttt{/* PLUG: ... */}.
 \end{frame}
 
-\begin{frame}{Przykłady na koniec}
+\begin{frame}{Przykłady na~koniec}
 Woda:
 
 \begin{figure}
   \centering
   \includegraphics[width=1.8in]{../water_shaders_3}
-  \caption{Woda, połączenie kilku efektów: generuj wektory normalne, transformuj je do eye space, połącz z reflection + refraction}
+  \caption{Woda, połączenie kilku efektów: generuj wektory normalne, transformuj je do~eye space, połącz z~reflection + refraction}
 \end{figure}
 
 Kwiatki:
@@ -419,9 +419,9 @@ Kwiatki:
 
 \begin{center}
 {\small
-Wszystko jest już zaimplementowane, open-source (LGPL), w moim silniku:\\
+Wszystko jest już zaimplementowane, open-source (LGPL), w~moim silniku:\\
 {\color{blue} \textbf{\texttt{http://vrmlengine.sourceforge.net/}}}\\
-Instrukcje jak pobrać i oglądać przykładowe modele dotyczące komponowania
+Instrukcje jak pobrać i~oglądać przykładowe modele dotyczące komponowania
 shaderów:\\
 {\color{blue} \textbf{\texttt{http://vrmlengine.sourceforge.net/\\
 compositing\_shaders.php}}}}
@@ -430,7 +430,7 @@ compositing\_shaders.php}}}}
 \vspace{0.25in}
 
 \begin{center}
-{\Large Dziękuję za uwagę!}
+{\Large Dziękuję za~uwagę!}
 \end{center}
 
 %\vspace{0.1in}
