Change section name from "Nasz pomysl".
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@9032 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders/slides/compositing_shaders_sem_dokt_polish.tex
+++ b/compositing_shaders/slides/compositing_shaders_sem_dokt_polish.tex
@@ -218,7 +218,7 @@ Shape \{
 \end{itemize}
 \end{frame}
 
-\section{Nasz pomysł}
+\section{Komponowanie shaderów w X3D}
 
 \begin{frame}{Dlaczego}
 \begin{itemize}
