--- a/compositing_shaders/slides/compositing_shaders_sem_dokt_polish.tex
+++ b/compositing_shaders/slides/compositing_shaders_sem_dokt_polish.tex
@@ -218,7 +218,7 @@ Shape \{
 \end{itemize}
 \end{frame}
 
-\section{Komponowanie shaderów w X3D}
+\section[Nasz pomysł]{Nasz pomysł: komponowanie shaderów w X3D}
 
 \begin{frame}{Dlaczego}
 \begin{itemize}
