Add slides PDF, with correct date.
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@9042 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders/slides/compositing_shaders_sem_dokt_polish.tex
+++ b/compositing_shaders/slides/compositing_shaders_sem_dokt_polish.tex
@@ -27,9 +27,8 @@
 \usepackage[T1]{fontenc}
 
 \title{Komponowanie shaderów w~X3D}
-
 \author[Michalis Kamburelis]{Michalis Kamburelis \\ \texttt{michalis.kambi@gmail.com}}
-
+\date{31 maja 2011}
 
 \AtBeginSection[]
 {
